...
                  duration: const Duration(milliseconds: 300),
                  curve: Curves.ease,
                );
              },
            ),
            TextButton(
              child: const Text('skip'),
              onPressed: () {
                ref.read(skipOnboardingController).skip();
                context.beamToNamed('/sign_in');
              },
            ),
          ],
...
